Run tests with cache